<resources>
    <string name="app_name">Connected Home</string>



    <string name="connected_home">Connected Home</string>
    <string name="task_view">TASK VIEW</string>
    <string name="sammie">Sammie</string>
    <string name="view_tasks">VIEW TASKS</string>
    <string name="john">John</string>
    <string name="family_s_task_progression">Family\'s Task Progression</string>
    <string name="who_gets_the_task">Who gets the task?</string>
    <string name="child_name">Child Name</string>
    <string name="describe_the_task">Describe the Task</string>

    <string name="add_a_reward">Add a Reward</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="add_task">ADD TASK</string>
    <string name="name">Name</string>
    <string name="reward_type">Reward Type</string>
    <string name="button">Button</string>
    <string name="submit_task">SUBMIT TASK</string>
    <string name="task_description">Task Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="task_created">Task Created!</string>
    <string name="Continue">Continue</string>
    <string name="click_to_continue">Click to Continue</string>
    <string name="complete">Complete</string>
    <string name="task_has_been_created">Task has been created!</string>
    <string name="tap_to_continue">Tap to Continue</string>
    <string name="emma">Emma</string>
    <string name="_4_of_5_tasks_completed">4 of 5 Tasks Completed</string>
    <string name="favorite_reward_2">Favorite Reward: $2</string>
    <string name="favorite_category_housework">Favorite Category: Housework</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="complete_homework">Complete Homework</string>
    <string name="take_out_the_trash">Take out the Trash</string>
    <string name="walk_the_dog">Walk the dog</string>
    <string name="clean_bedroom">Clean Bedroom</string>
    <string name="make_the_bed">Make the Bed</string>


    <plurals name="has_been_clicked">
        <item quantity="one">I\'ve been clicked %d time!</item>
        <item quantity="other">I\'ve been clicked %d times!</item>
    </plurals>
</resources>
