<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:text="@string/current_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:textSize="24sp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="176dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/linearLayout3">
        <TextView
                android:text="@string/complete_homework"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="362dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/textView10" android:textSize="18sp"/>
        <TextView
                android:text="@string/walk_the_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="386dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/textView11" android:textSize="18sp"/>
        <TextView
                android:text="@string/clean_bedroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="434dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/textView13" android:textSize="18sp"/>
        <TextView
                android:text="@string/make_the_bed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="410dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/textView12" android:textSize="18sp"/>
        <TextView
                android:text="@string/take_out_the_trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="338dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/textView9" android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="388dp"
            android:layout_height="232dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.074"
            android:id="@+id/linearLayout2">
        <TextView
                android:text="Child: Emma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:textSize="36sp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.027"
                app:layout_constraintVertical_bias="0.012"/>
        <TextView
                android:text="@string/_4_of_5_tasks_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="65dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/textView4" android:textSize="24sp"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:id="@+id/sammieBar"
                android:progressTint="@color/colorPrimaryDark" android:max="5" android:progress="4"
                tools:layout_editor_absoluteY="102dp" tools:layout_editor_absoluteX="0dp"/>
        <TextView
                android:text="@string/favorite_reward_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="183dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/textView5" android:textSize="18sp"/>
        <TextView
                android:text="@string/favorite_category_housework"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="221dp"
                tools:layout_editor_absoluteX="16dp" android:id="@+id/textView7" android:textSize="18sp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>