<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="398dp"
            android:layout_height="630dp" app:layout_constraintTop_toTopOf="parent"
            android:gravity="top" android:layout_marginTop="8dp"
            android:id="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/who_gets_the_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/WhoTask" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.041"/>
        <Spinner
                android:layout_width="395dp"
                android:layout_height="32dp" tools:layout_editor_absoluteY="72dp"
                tools:layout_editor_absoluteX="8dp" android:id="@+id/spinner" android:background="@color/colorPrimary"/>
        <TextView
                android:text="@string/who_gets_the_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DescTask" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="116dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                tools:text="Describe the Task"/>
        <EditText
                android:layout_width="383dp"
                android:layout_height="60dp"
                android:inputType="textPersonName"
                android:text="@string/task_description"
                android:ems="10"
                tools:layout_editor_absoluteY="171dp" tools:layout_editor_absoluteX="16dp"
                android:id="@+id/enterTaskDesc" android:autofillHints="" tools:targetApi="o"/>
        <TextView
                android:text="@string/who_gets_the_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descTask" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="260dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.039"
                tools:text="Add a Reward"/>
        <Spinner
                android:layout_width="395dp"
                android:layout_height="32dp" tools:layout_editor_absoluteY="314dp"
                tools:layout_editor_absoluteX="18dp" android:id="@+id/spinner2"
                android:background="@color/colorPrimary"/>
    </LinearLayout>


    <Button
            android:text="@string/submit"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:id="@+id/submitbutton"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>


</android.support.constraint.ConstraintLayout>